[package]
name = "mandelbrot_explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.3"
egui = "0.32.3"
num-complex = "0.4.5"
rayon = "1.10.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[profile.release]
opt-level = 2

[profile.dev]
opt-level = 1