[package]
name = "mandelbrot_explorer"
version = "0.1.0"
edition = "2024"

# Common dependencies, used by both native and web.
[dependencies]
egui = "0.32"
egui-wgpu = "0.32"
log = "0.4"
rayon = "1.11"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.32", features = ["wayland", "x11"]}
tracing-subscriber = "0.3"

# Web-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.32", features = ["glow"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
web-sys = "0.3"
#egui-wgpu = "0.32"
#wgpu = { version = "26.0", features = ["webgpu", "webgl"] }

[profile.release]
opt-level = 2

[profile.dev]
opt-level = 1

[lib]
crate-type = ["cdylib", "rlib"]
